// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MissionCrewListItemPam > Invited crew member (without agent) > matches snapshot 1`] = `
<div>
  <div
    class="rs-flex-box-grid rs-flex-box-grid-middle rs-flex-box-grid-start"
  >
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-1"
    >
      <span
        class="sc-gLDzao hZRUsu Element-IconBox"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <rect
            fill="none"
            height="20"
            width="20"
          />
          <path
            d="M50,10a4,4,0,1,0-4-4A4,4,0,0,0,50,10Zm0,2c-2.67,0-8,1.34-8,4v2H58V16C58,13.34,52.67,12,50,12Z"
            fill="currentColor"
            transform="translate(-40)"
          />
        </svg>
      </span>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-7"
    >
      <p
        class="sc-kkjMEg sc-grpWxN cERwlZ qoiMj sc-fzmOIW eXUlxN"
        data-testid="crew-member-agent"
        font-size="13"
      >
        Marie Martin
      </p>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-6"
    >
      <p
        class="sc-kkjMEg sc-grpWxN cERwlZ qoiMj"
        data-testid="crew-member-role"
        font-size="13"
      >
        Observateur
      </p>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-7"
    >
      <div
        class="rs-flex-box-grid rs-flex-box-grid-middle rs-flex-box-grid-start"
      >
        <div
          class="rs-flex-box-grid-item rs-flex-box-grid-item-3"
          style="margin-left: 4px;"
        >
          <span
            class="sc-gLDzao cuYhqS Element-IconBox"
          >
            <svg
              class="sc-dQDPHX jibVbA"
              comment="Invité externe"
              data-testid="crew-member-comment-icon"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <clippath>
                <path
                  d="m0 0h20v20h-20z"
                />
              </clippath>
              <g
                clip-path="url(#a)"
              >
                <path
                  d="m0 0h20v20h-20z"
                  fill="transparent"
                />
                <path
                  d="m6.455 19.41-4.455 3.59v-18.974a1.013 1.013 0 0 1 1-1.026h18a1.013 1.013 0 0 1 1 1.026v14.359a1.013 1.013 0 0 1 -1 1.026zm.545-9.231v2.051h2v-2.051zm4 0v2.051h2v-2.051zm4 0v2.051h2v-2.051z"
                  fill="currentColor"
                  transform="translate(-2 -3)"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="rs-flex-box-grid-item rs-flex-box-grid-item-18"
        >
          <p
            class="sc-kkjMEg sc-grpWxN cERwlZ qoiMj sc-ialjHz gGjMSj"
            font-size="13"
          >
            Invité externe
          </p>
        </div>
      </div>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-3"
    >
      <div
        class="rs-stack"
        style="align-items: center; justify-content: flex-end; flex-direction: row; margin-right: -4px;"
      >
        <div
          class="rs-stack-item"
        >
          <button
            class="sc-fmSAUj groCG Element-IconButton sc-dlyeSU icawOL"
            data-testid="edit-crew-member-icon"
            role="edit-crew"
            type="button"
          >
            <span
              class="sc-gLDzao hZRUsu Element-IconBox"
            >
              <svg
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <rect
                  fill="none"
                  height="20"
                  width="20"
                />
                <g>
                  <path
                    d="M10.713,5.983,14.02,9.288,6.3,17H3V13.7l7.716-7.718Zm1.1-1.1,1.653-1.653a.779.779,0,0,1,1.1,0l2.2,2.2a.779.779,0,0,1,0,1.1L15.121,8.185Z"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="rs-stack-item"
        >
          <button
            class="sc-fmSAUj groCG Element-IconButton sc-gKcDQN gniESn"
            data-testid="delete-crew-member-icon"
            role="delete-crew"
            type="button"
          >
            <span
              class="sc-gLDzao hZRUsu Element-IconBox"
            >
              <svg
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <g
                  transform="translate(-23.798 -14.096)"
                >
                  <g>
                    <rect
                      fill="currentColor"
                      height="6"
                      transform="translate(31.548 22.096)"
                      width="1.5"
                    />
                    <rect
                      fill="currentColor"
                      height="6"
                      transform="translate(34.548 22.096)"
                      width="1.5"
                    />
                    <path
                      d="M41.8,17.6h-4V16.1h-8v1.5h-4v2h1.5V31.1a1,1,0,0,0,1,1h11a1,1,0,0,0,1-1V19.6h1.5ZM38.3,30.1h-9V19.6h9Z"
                      fill="currentColor"
                    />
                  </g>
                  <rect
                    fill="none"
                    height="20"
                    transform="translate(23.798 14.096)"
                    width="20"
                  />
                </g>
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MissionCrewListItemPam > Standard crew member (with agent) > matches snapshot 1`] = `
<div>
  <div
    class="rs-flex-box-grid rs-flex-box-grid-middle rs-flex-box-grid-start"
  >
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-1"
    >
      <div
        class="sc-jegxcw bPObzv Element-Field Field-Checkbox"
        style="margin-top: -10px;"
      >
        <div
          class="sc-ejdXBF hXFCyq rs-checkbox rs-checkbox-checked"
        >
          <div
            class="rs-checkbox-checker"
          >
            <label>
              <span
                class="rs-checkbox-control"
              >
                <input
                  aria-checked="true"
                  aria-disabled="false"
                  aria-labelledby="label-_r_a_"
                  checked=""
                  tabindex="0"
                  type="checkbox"
                />
                <span
                  aria-hidden="true"
                  class="rs-checkbox-inner"
                  data-testid="checkbox-control-inner"
                />
              </span>
              <span
                class="rs-checkbox-label"
                id="label-_r_a_"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-7"
    >
      <p
        class="sc-kkjMEg sc-grpWxN cERwlZ qoiMj sc-fzmOIW eXUlxN"
        data-testid="crew-member-agent"
        font-size="13"
      >
        Jean Dupont
      </p>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-6"
    >
      <p
        class="sc-kkjMEg sc-grpWxN cERwlZ qoiMj"
        data-testid="crew-member-role"
        font-size="13"
      >
        Commandant
      </p>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-9"
    >
      <div
        class="rs-flex-box-grid rs-flex-box-grid-middle rs-flex-box-grid-start"
      >
        <div
          class="rs-flex-box-grid-item rs-flex-box-grid-item-20"
        />
      </div>
    </div>
    <div
      class="rs-flex-box-grid-item rs-flex-box-grid-item-1"
    >
      <div
        class="rs-stack"
        style="align-items: center; flex-direction: row;"
      >
        <div
          class="rs-stack-item"
        >
          <button
            class="sc-fmSAUj groCG Element-IconButton"
            data-testid="edit-crew-member-icon"
            role="edit-crew"
            title="Manager les absences temporaires"
            type="button"
          >
            <span
              class="sc-gLDzao hZRUsu Element-IconBox"
            >
              <svg
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <g
                  transform="translate(280 -41)"
                >
                  <g>
                    <g
                      fill="none"
                      stroke-miterlimit="10"
                    >
                      <path
                        d="M-266,44V42h-2v2h-4V42h-2v2h-4V59h16V44Zm2,13h-12V50h12Zm0-9h-12V46h12Z"
                        stroke="none"
                      />
                      <path
                        d="M -274 42 L -272 42 L -272 44 L -268 44 L -268 42 L -266 42 L -266 44 L -262 44 L -262 59 L -278 59 L -278 44 L -274 44 L -274 42 Z M -264 48 L -264 46 L -276 46 L -276 48 L -264 48 Z M -264 57 L -264 50 L -276 50 L -276 57 L -264 57 Z"
                        fill="currentColor"
                        stroke="none"
                      />
                    </g>
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-miterlimit="10"
                      stroke-width="2"
                      transform="translate(-274 52)"
                    >
                      <rect
                        height="3"
                        stroke="none"
                        width="4"
                      />
                      <rect
                        fill="none"
                        height="1"
                        width="2"
                        x="1"
                        y="1"
                      />
                    </g>
                  </g>
                  <rect
                    fill="none"
                    height="20"
                    transform="translate(-280 41)"
                    width="20"
                  />
                </g>
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
